package org.openmarkov.plugin;

public enum PluginClassCategory {
    OPENMARKOV,
    JAVA,
    EXTERNAL_DEPENDENCY,
}
